Logs/02-10-13_18-13-36.txt
2013-02-10 18:13:36.848000: ENGINE starting
2013-02-10 18:13:36.854000: ENGINE loading STUDENT ENGINE part 3
2013-02-10 18:13:36.864000: ERROR: invalid syntax (__init__.py, line 346)
2013-02-10 18:13:36.873000: TRACE:
Traceback (most recent call last):
  File ".\Engine\controller.py", line 59, in __init__
  File "C:\Python32\lib\importlib\__init__.py", line 124, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 821, in _gcd_import
    loader.load_module(name)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 436, in load_module
    return self._load_module(fullname)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 141, in decorated
    return fxn(self, module, *args, **kwargs)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 330, in _load_module
    code_object = self.get_code(name)
  File "C:\Python32\lib\importlib\_bootstrap.py", line 413, in get_code
    dont_inherit=True)
  File "C:\Users\Joe\Documents\GitHub\Quoridor\StudentEngines\jak3122\__init__.py", line 346
    jumped_square =
                   ^
SyntaxError: invalid syntax

